# snake-ai

./: README.md  Taskfile.yml  pyproject.toml
game/: __main__.py  game.py  settings.py
game/models/: snake.py
snake-ai-pytorch-main/model/: model.pth
snake_ai/: main.py  stats.py  utils.py
snake_ai/ai/: agent.py  model.py
snake_ai/game/: game.py
snake_ai/models/: direction.py  settings.py  snake.py  state.py  step_info.py
