[tool.poetry]
name = "snake-ai"
version = "0.1.0"
description = ""
authors = ["ionic101 <iv.osipov2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"
torch = "^2.7.1"
numpy = "^2.3.1"
matplotlib = "^3.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
